[package]
name = "perplexity"
version = "0.1.0"
authors = ["Jason Fan <jasonfan@umd.edu>"]
edition = "2018"

[profile.dev]
#opt-level = 3

[profile.release]
opt-level = 3

[dependencies]
chrono = "0.4.13"
clap = "2.33.3"
csv = "1.1.3"
ndarray = "0.13.1"
serde = {version = "1.0.115", features = ["derive"] }
serde_yaml = "0.8"
slog = "2.5.2"
slog-term = "2.6.0"
slog-async = "2.5.0"
special = "0.8.1"

seine = { git = "https://github.com/COMBINE-lab/seine-rs", branch = "main" }
